--- a/markup/responsive/css/main.css
+++ b/markup/responsive/css/main.css
@@ -6,7 +6,7 @@ Last Updated: 2010-09-17
 Author: Richard Clark - http://richclarkdesign.com 
 Twitter: @rich_clark
 */
-*, *:after, *:before {
+*, *:after, *:before, .title::after {
   box-sizing: border-box;
 }
 
@@ -49,8 +49,9 @@ blockquote, q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before, blockquote.title::after, blockquote:after,
+q:before,
+q.title::after, q:after {
   content: "";
   content: none;
 }
@@ -116,7 +117,7 @@ input, select {
 /*  mixin  */
 /*  共通部分  */
 html {
-  font-size: 62.5%;
+  font-size: 10px;
 }
 
 body {
@@ -142,7 +143,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.8rm;
+  font-size: 1.8rem;
   font-style: italic;
   margin-bottom: 60px;
 }
@@ -154,7 +155,7 @@ body {
 .title--b {
   font-weight: bold;
 }
-.title::before {
+.title::before, .title::after {
   display: inline-block;
   content: "";
   width: 3rem;
@@ -162,11 +163,8 @@ body {
   border-top: 1px solid #191919;
 }
 .title::after {
-  display: inline-block;
-  content: "";
-  width: 3rem;
+  margin-right: 0;
   margin-left: 2rem;
-  border-top: 1px solid #191919;
 }
 
 header {
